# Weather-App-Cpp

./: CMakeLists.txt  LocationManager.cpp  LocationManager.h  air_quality_data.h  air_quality_data_manager.h  air_quality_forecast.h  daily_weather_variables.h  european_air_quality_index_calculator.h  historical_waether_data.cpp  historical_waether_data.h  location.cpp  location.h  main.cpp  settings.h  weather_api_client.cpp  weather_data.cpp  weather_data.h  weather_data_parser.cpp  weather_forecast.h  weather_models.h
